--- a/my/package.json
+++ b/my/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.4",
+    "classname": "^0.0.0",
     "final-form": "^4.20.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -61,6 +62,4 @@
       "node_modules/(?!(react-leaflet|@react-leaflet|d3-*|axios))"
     ]
   }
-  
-  
 }
